Don't allow to move axes with the arrow keys.

BUG: 480593
FIXED-IN: 2.11